syntax = "proto3";

option go_package = "github.com/tasjen/message-app-fullstack/services/chat/chat_proto";

service Chat {
  rpc GetGroupIds (GetGroupIdsReq) returns (GetGroupIdsRes) {}
}

message GetGroupIdsReq {
  bytes user_id = 1;
}

message GetGroupIdsRes {
  repeated bytes group_ids = 1;
}

